third_party/move/move-compiler-v2/tests/checking/typing/assign_nested.exp

Diagnostics:
error: expected 4 item(s), found 3
   ┌─ tests/checking/typing/assign_nested.move:14:9
   │
14 │         (_, x, _) = four();
   │         ^^^^^^^^^
